# FAQ-Chat-APP

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  init_vector_db.sh  pyproject.toml
src/: main.py
src/core/: config.py  security.py
src/models/: vector_db.py
src/routes/: chat.py
src/schemas/: chat.py
src/services/: classifier.py  embedding.py  llm.py
src/utils/: logging.py
