[tool.poetry]
name = "company-faq-bot"
version = "1.0.0"
description = "High-performance FAQ Chatbot with RAG and Guardrails"
authors = ["A K M Muhibullah Nayem <nayem.drmc@gmail.com>"]
license = "Proprietary"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { version = "^0.109.0", extras = ["all"] }
uvicorn = { version = "^0.27.0", extras = ["standard"] }
gunicorn = "^21.2.0"
asyncpg = "^0.29.0"
sentence-transformers = "^2.2.2"
boto3 = "^1.38.20"
transformers = "^4.52.1"
structlog = "^25.3.0"
python-dotenv = "^1.1.0"
numpy = "^2.2.6"
pydantic-settings = "^2.9.1"
psycopg2-binary = "^2.9.10"
types-psycopg2 = "^2.9.21.20250516"
tqdm = "^4.67.1"
accelerate = "^1.7.0"
tokenizers = "^0.21.1"
onnxruntime = "^1.22.0"
slowapi = "^0.1.9"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
serve = "src.main:app"


